src/test/ui/issues/issue-46472.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/issue-46472.rs:2:10
   |
LL |     &mut 4
   |          ^ creates a temporary which is freed while still in use
LL |
LL | }
   | -- borrow later used here
   | |
   | temporary value is freed at the end of this statement
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
